# poetry-react-fastapi

./: README.md  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.js  backup.js  index.js
frontend/src/pages/: Dashboard.js
frontend/src/pages/layout/: AppBarProfile.js  Layout.js  NavItems.js  NotificationsPopover.js  palette.js
poetry_fastapi_test/: main.py
