[tool.poetry]
name = "poetry-fastapi-test"
version = "0.1.0"
description = ""
authors = ["Brendon"]
readme = "README.md"
packages = [{include = "poetry_fastapi_test"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "poetry_fastapi_test.main:start"
